objects/ssot__ApplicationRecommender__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApplicationId__c</fullName>
        <label>Application</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Application Recommender Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecommendationStatus__c</fullName>
        <label>Recommendation Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecommenderId__c</fullName>
        <label>Recommender</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubmittedDate__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818624678_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationRecommender_ApplicationId_rel</label>
        <referenceTo>ssot__Application__dlm</referenceTo>
        <relationshipLabel>ApplicationRecommender_ApplicationId_rel</relationshipLabel>
        <relationshipName>rel_1719818624678_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291152559_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationRecommender_RecommenderId_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>ApplicationRecommender_RecommenderId_rel</relationshipLabel>
        <relationshipName>rel_1720291152559_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>